# sdb

./: Cargo.toml  MACRO_TURORIAL.md  README.md  launch-demo-db.sh  rust-toolchain.toml
.cargo/: config.toml
sdb/: Cargo.toml  example-db-content.sql
sdb-base/: Cargo.toml
sdb-base/src/: any_record.rs  base.rs  client.rs  credentials.rs  error.rs  lib.rs  parse_target.rs  protocol.rs  record.rs  record_id.rs  server_info.rs  transaction.rs
sdb-base/src/client/: builder.rs  client.rs  interface.rs  mod.rs
sdb-base/src/client/interface/: method.rs  mod.rs  request.rs  response.rs
sdb-base/src/interfaces/http/: http_rest.rs  http_wasm.rs  mod.rs
sdb-base/src/interfaces/ws/: mod.rs  ws_rest.rs  ws_wasm.rs
sdb-base/src/record/: any.rs  id.rs  link.rs
sdb-base/src/reply/: query.rs  transaction.rs
sdb-base/src/value/: mod.rs
sdb-macros/: Cargo.toml
sdb-macros/inner-macros/: Cargo.toml
sdb-macros/inner-macros/src/: lib.rs
sdb-macros/src/: inc_stream.rs  macro.rs  parts.rs  query_test.rs  query_tester.rs  syntaxer.rs  tester.rs
sdb-macros/src/parts/: args.rs  insert.rs  let_line.rs  mod.rs  query.rs  query_args.rs  query_func.rs  query_line.rs  raw_line.rs  rename.rs  result_type.rs  select_line.rs  sql_block.rs  sql_method.rs  statement.rs  sugar.rs  trans_func.rs  trans_func_args.rs  universal.rs  vars.rs
sdb-macros/src/parts/query/: multi.rs  single.rs
sdb-macros/src/parts/query_line/: let_line.rs  raw_line.rs  select_anon.rs  select_line.rs
sdb-macros/src/parts/sql_block/: mod.rs  sql_method.rs
sdb-macros/src/parts/statement/: import.rs  tail.rs
sdb-macros/src/syntaxer/: bracketer.rs  mod.rs  pointer.rs
sdb-macros/src/tester/: local.rs  message.rs  remote.rs
sdb-macros/src/tester/local/: bracketer.rs  pointer.rs
sdb-parser/: Cargo.toml
sdb-parser/examples/: parse-test.rs
sdb-parser/src/: lib.rs  parser.rs
sdb-parser/src/parser/: group_border.rs  span.rs  tree.rs
sdb/example.db/: 000008.sst  000013.sst  000022.sst  000036.sst  000039.sst  000044.sst  000049.sst  000059.sst  IDENTITY  LOG  LOG.old.1672855827613620  LOG.old.1672968629453258  LOG.old.1673813155094677  LOG.old.1673818427355864  LOG.old.1673818556247548  LOG.old.1673819328609935  LOG.old.1673906482850699  LOG.old.1674519421008326  MANIFEST-000010  MANIFEST-000019  MANIFEST-000024  MANIFEST-000028  MANIFEST-000051  MANIFEST-000063
sdb/examples/: crash-course.rs  demo.rs  library.rs  mega-demo.rs
sdb/src/: any_record.rs  client.rs  credentials.rs  error.rs  lib.rs  record.rs  record_id.rs  record_link.rs  server_info.rs  transaction.rs
sdb/src/client/: builder.rs  client.rs  interface.rs  mod.rs
sdb/src/client/interface/: method.rs  mod.rs  request.rs  response.rs
sdb/src/interfaces/: mod.rs
sdb/src/interfaces/http/: http_rest.rs  http_wasm.rs  mod.rs
sdb/src/interfaces/ws/: mod.rs  ws_rest.rs  ws_wasm.rs
sdb/src/protocols/: mod.rs
sdb/src/protocols/http/: http_rest.rs  http_wasm.rs
sdb/src/protocols/ws/: mod.rs  ws_rest.rs  ws_wasm.rs
sdb/src/record/: any.rs  id.rs  link.rs
sdb/src/reply/: mod.rs  query.rs  statement.rs  transaction.rs
