[package]
name = "sdb-base"
version = "0.6.0"
edition = "2021"
description = "An unofficial SurrealDB client, intended for working with Yew"
readme = "README.md"
repository = "https://github.com/Threadzless/sdb/"
keywords = ["surreal", "surrealdb", "yew", "webapp", "html5" ]
categories = ["database", "wasm", "web-programming"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/base.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
base64 = { version = "0.20" }

log = { version = "0.4", optional = true }

sdb-macros = { path = "../sdb-macros", optional = true }

[dev-dependencies]
tokio-test = "0.4.2"
sdb-macros = { path = "../sdb-macros" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.10", optional = true }
websockets = { version = "0.3", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
futures = { version = "0.3.25", optional = true }
gloo-net = { version = "0.2", optional = true }

[features]
default = [
    "log",
    "http",
    "ws",
]
http = [ 
    "gloo-net",
    "reqwest",
]
ws = [
    "futures",
    "gloo-net",
    "websockets",
]
tikv = [
]
# include some helpers for doctests. this are not useful outside of this librarie's self-testing
extras = [
    "dep:sdb-macros"
]