[package]
name = "sdb-macros"
version = "0.5.0"
edition = "2021"
description = "An unofficial SurrealDB client, intended for working with Yew"
readme = "README.md"
repository = "https://github.com/Threadzless/sdb/"
keywords = ["surreal", "surrealdb", "yew", "webapp", "html5" ]
categories = ["database", "wasm", "web-programming"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/macro.rs"
proc-macro = true

[dependencies]
syn = { version = "1", features = [ "full", "extra-traits", "parsing" ] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = { version = "1" }
serde = "1.0"
serde_json = "1"
regex = "*"

[dependencies.reqwest]
version = "0.11"
optional = true
features = [ "blocking", "json" ]
default-features = false

[dev-dependencies]
tokio-test = "0.4"

[features]
default = [
    # "query-test",
    # "macro-print",
]
## Prints the output of the macro at compile time. helpful for debugging 
macro-print = [ ]
# Runs compile time tests against a live surrealdb server. (using transactions. Everything is rolled back for safety)
query-test = [
    "reqwest",
]