[package]
name = "sdb"
version = "0.1.1"
edition = "2021"
description = "An unofficial SurrealDB client, intended for working with Yew"
readme = "README.md"
repository = "https://github.com/Threadzless/sdb/"
keywords = ["surreal", "surrealdb", "yew", "webapp", "html5" ]
cateories = ["database", "wasm", "web-programming"]
license = "MIT"
exclude = ["sdb/example.db", "launch-demo-dh.sh"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdb-base = { path = "../sdb-base", default-features = false }
sdb-macros = { path = "../sdb-macros", default-features = false }

log = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
log = { version ="0.4" }
simplelog = { version = "0.12" }
tokio-test = "0.4.2"

[features]
default = [
    "log",
    "http",
    "ws",
#    "query-test",
]
log = [
    "dep:log",
    "sdb-base/log",
]
http = [ 
    "sdb-base/http",
]
ws = [
    "sdb-base/ws",
]
tikv = [
    "sdb-base/tikv",
]
macro-print = [
    "sdb-macros/macro-print",
]
query-test = [
    "sdb-macros/query-test",
]
