[package]
name = "sdb"
version = "0.2.0"
edition = "2021"
description = "An unofficial SurrealDB client that works in wasm"
readme = "README.md"
repository = "https://github.com/Threadzless/sdb/"
keywords = ["surreal", "surrealdb", "yew", "webapp", "html5"]
categories = ["database", "wasm", "web-programming"]
license = "MIT"
exclude = ["/example.db", "example-db-content.sql"]

[lib]
path = "src/lib.rs"

[dependencies]
sdb-base = { path = "../sdb-base", default-features = false }
sdb-macros = { path = "../sdb-macros", default-features = false }

log = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
log = { version ="0.4" }
simplelog = { version = "0.12" }
tokio-test = "0.4.2"

[features]
default = [
    "log",
    "http",
    "ws",
#    "query-test",
]
log = [
    "dep:log",
    "sdb-base/log",
]
http = [ 
    "sdb-base/http",
]
ws = [
    "sdb-base/ws",
]
tikv = [
    "sdb-base/tikv",
]
macro-print = [
    "sdb-macros/macro-print",
]
query-test = [
    "sdb-macros/query-test",
]
