[package]
name = "sdb"
version = "0.9.2"
edition = "2021"
description = "An unofficial SurrealDB client that works in wasm"
readme = "README.md"
repository = "https://github.com/Threadzless/sdb/"
keywords = ["surreal", "surrealdb", "yew", "webapp", "html5"]
categories = ["database", "wasm", "web-programming"]
license = "MIT"
exclude = ["/example.db", "example-db-content.sql"]

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
base64 = { version = "0.20" }
rand = "0.8.5"
log = { version = "0.4", optional = true }

sdb-macros = { path = "../sdb-macros"}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.10", optional = true }
websockets = { version = "0.3", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
futures = { version = "0.3.25", optional = true }
gloo-net = { version = "0.2", optional = true }

sdb-macros = { path = "../sdb-macros", default-features = false }

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
log = { version = "0.4" }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[features]
default = [
    "log",
    "http",
    "ws",
]
http = [ 
    "gloo-net",
    "reqwest",
]
ws = [
    "futures",
    "gloo-net",
    "websockets",
]
tikv = [
]
# include some helpers for doctests. this are not useful outside of this librarie's self-testing
macro-print = [
    "sdb-macros/macro-print",
]
query-test = [
    "sdb-macros/query-test",
]